# plutus

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  architecture_notes.md  build_compiled.py  hatch_build.py  install.ps1  install.sh  pyproject.toml  routes_notes.md  uninstall.ps1
.claude/: settings.json
.github/workflows/: cloud-ci.yml  publish.yml
backend/app/api/: bridge.py
backend/bridge/: plutus_bridge.py
bridge/: README.md  plutus_bridge.py  sync_client.py
cloud/: .env.example  README.md  docker-compose.yml
cloud/backend/: Dockerfile  _verify_migration.py  alembic.ini  requirements.txt  ruff.toml
cloud/backend/alembic/: env.py
cloud/backend/alembic/versions/: 001_initial_schema.py  002_add_plans_table.py
cloud/backend/app/: config.py  database.py  main.py
cloud/backend/app/agent/: runtime.py
cloud/backend/app/api/: agents.py  auth.py  bridge.py  chat.py  health.py  misc.py  sync.py  workspace.py  ws.py
cloud/backend/app/models/: __init__.py  agent_state.py  base.py  conversation.py  plan.py  sync_log.py  user.py
cloud/backend/app/services/: agent_service.py  cloud_connector_executor.py  cloud_heartbeat.py  cloud_plan_manager.py  connector_service.py  e2b_manager.py  google_oauth.py  hybrid_executor.py  user_service.py  workspace_sync.py
cloud/backend/app/sync/: sync_service.py
cloud/backend/bridge/: plutus_bridge.py  requirements.txt
cloud/backend/shared/: pyproject.toml
cloud/backend/shared/memory/: __init__.py
cloud/backend/shared/models/: __init__.py
cloud/backend/shared/skills/: __init__.py  cloud_store.py
cloud/frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
cloud/frontend/src/: App.tsx  index.css  main.tsx
cloud/frontend/src/components/chat/: ChatInput.tsx  ChatView.tsx  CommandCenter.tsx  ConversationHistory.tsx  MessageBubble.tsx  ToolApproval.tsx
cloud/frontend/src/components/connectors/: ConnectorLogos.tsx  ConnectorsView.tsx
cloud/frontend/src/components/dashboard/: ActivityFeed.tsx  DashboardView.tsx  StatusCard.tsx
cloud/frontend/src/components/guardrails/: PermissionToggle.tsx
cloud/frontend/src/hooks/: useApi.ts  useIsMobile.ts  useWebSocket.ts
cloud/frontend/src/lib/: api.ts  types.ts
cloud/frontend/src/pages/: AgentChat.tsx  Connectors.tsx  Dashboard.tsx  Memory.tsx  Settings.tsx
cloud/frontend/src/store/: agentStore.ts
cloud/frontend/src/stores/: appStore.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Settings.tsx
plutus/: __init__.py  __main__.py  cli.py  config.py
plutus/bridge/: __init__.py  bridge.py
plutus/connectors/: __init__.py  ai_providers.py  base.py  cloud_bridge.py  custom_api.py  discord.py  discord_bridge.py  elevenlabs.py  email.py  github.py  google.py  google_auth.py  telegram.py  telegram_bridge.py  web_hosting.py  whatsapp.py  whatsapp_bridge.js  whatsapp_bridge.py
plutus/core/: __init__.py  agent.py  computer_use_agent.py  conversation.py  heartbeat.py  keep_alive.py  llm.py  memory.py  model_router.py  openai_computer_use.py  planner.py  scheduler.py  session_registry.py  subprocess_manager.py  summarizer.py  worker_pool.py
plutus/gateway/: __init__.py  routes.py  server.py  ws.py
plutus/guardrails/: __init__.py  audit.py  engine.py  policies.py  tiers.py
plutus/moodle/: __init__.py  client.py  monitor.py
plutus/pc/: __init__.py  browser_control.py  browser_detect.py  computer_use.py  context.py  desktop_control.py  keyboard.py  mouse.py  os_control.py  platform_utils.py  screen.py  smart_click.py  windows.py  workflow.py
plutus/skills/: __init__.py  base.py  creator.py  engine.py  loader.py  python_runner.py  registry.py
plutus/skills/apps/: browser.py  calendar.py  files.py  gmail.py  spotify.py  whatsapp.py
plutus/tools/: __init__.py  app_manager.py  base.py  browser.py  clipboard.py  code_analysis.py  code_editor.py  connector_tool.py  desktop.py  filesystem.py  git_tool.py  image_gen.py  memory_tool.py  openai_computer.py  pc_control.py  process.py  registry.py  scheduler_tool.py  shell.py  speak.py  subprocess_tool.py  system_info.py  tool_creator.py  transcription.py  ui_customizer.py  video_gen.py  web_deploy.py  web_search.py  worker_tool.py  workspace_sync.py  wsl.py
plutus/utils/: ssl_utils.py
plutus/workers/: code_analysis_worker.py  custom_worker.py  file_edit_worker.py  shell_worker.py
scripts/: build_release.sh  strip_sources.py
shared/: __init__.py
shared/connectors/: __init__.py
shared/memory/: cloud_store.py  local_store.py
shared/models/: message.py  sync.py
shared/skills/: local_store.py
tests/: test_config.py  test_guardrails.py  test_memory_system.py  test_subprocess.py  test_tools.py  test_updates.py
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/chat/: ChatInput.tsx  ChatView.tsx  CommandCenter.tsx  ConversationHistory.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  SessionTabBar.tsx  ToolApproval.tsx
ui/src/components/connectors/: ConnectorsView.tsx
ui/src/components/dashboard/: ActivityFeed.tsx  DashboardView.tsx  StatusCard.tsx
ui/src/components/guardrails/: GuardrailsView.tsx  PermissionToggle.tsx  TierSelector.tsx
ui/src/components/layout/: ConnectionBanner.tsx  ConversationPanel.tsx  Header.tsx  Sidebar.tsx  UpdateBanner.tsx
ui/src/components/memory/: MemoryView.tsx
ui/src/components/onboarding/: OnboardingWizard.tsx
ui/src/components/pc-control/: PCControlView.tsx
ui/src/components/sessions/: SessionsView.tsx
ui/src/components/settings/: BrowserConfig.tsx  HeartbeatConfig.tsx  ModelConfig.tsx  SettingsView.tsx  WSLSetup.tsx  WorkspaceSyncView.tsx
ui/src/components/skills/: SkillsView.tsx
ui/src/components/tool-creator/: ToolCreatorView.tsx
ui/src/components/tools/: ToolsView.tsx
ui/src/components/workers/: WorkersView.tsx
ui/src/hooks/: useTheme.ts  useWebSocket.ts
ui/src/lib/: api.ts  types.ts
ui/src/stores/: appStore.ts
(+12 files in other folders)
