[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plutus-ai"
dynamic = ["version"]
description = "Autonomous AI agent with subprocess orchestration, dynamic tool creation, and a local-first web interface"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{ name = "Plutus Contributors" }]
keywords = ["ai", "agent", "autonomous", "guardrails", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "litellm>=1.55.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "psutil>=6.1.0",
    "python-multipart>=0.0.18",
    "anthropic>=0.40.0",
    "pyperclip>=1.8.0",
    "aiohttp>=3.9.0",
    "discord.py>=2.3.0",
]

[project.optional-dependencies]
desktop = [
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
]
browser = [
    "playwright>=1.49.0",
]
all = [
    "plutus-ai[desktop,browser]",
]
dev = [
    "plutus-ai[all]",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
build = [
    "cython>=3.0.0",
    "setuptools>=69.0.0",
]

[project.scripts]
plutus = "plutus.cli:main"

[project.urls]
Homepage = "https://github.com/plutus-ai/plutus"
Repository = "https://github.com/plutus-ai/plutus"
Issues = "https://github.com/plutus-ai/plutus/issues"

[tool.hatch.version]
path = "plutus/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["plutus"]
# Include compiled .so (Linux/macOS) and .pyd (Windows) in the wheel
artifacts = ["plutus/**/*.so", "plutus/**/*.pyd"]
# Exclude .py source for compiled/protected modules — only .so/.pyd ship in wheels.
# The sdist still includes all .py files for building from source.
exclude = [
    # Core orchestration
    "plutus/core/agent.py",
    "plutus/core/computer_use_agent.py",
    "plutus/core/conversation.py",
    "plutus/core/heartbeat.py",
    "plutus/core/llm.py",
    "plutus/core/model_router.py",
    "plutus/core/planner.py",
    "plutus/core/scheduler.py",
    "plutus/core/subprocess_manager.py",
    "plutus/core/summarizer.py",
    "plutus/core/worker_pool.py",
    # Gateway
    "plutus/gateway/ws.py",
    # PC control
    "plutus/pc/browser_control.py",
    "plutus/pc/computer_use.py",
    "plutus/pc/context.py",
    "plutus/pc/desktop_control.py",
    "plutus/pc/smart_click.py",
    "plutus/pc/workflow.py",
    # Advanced tools
    "plutus/tools/code_analysis.py",
    "plutus/tools/code_editor.py",
    "plutus/tools/pc_control.py",
    "plutus/tools/tool_creator.py",
    # Skills engine
    "plutus/skills/engine.py",
    "plutus/skills/creator.py",
    "plutus/skills/loader.py",
    "plutus/skills/python_runner.py",
    # Workers — NOT excluded: these are subprocess scripts that must ship as .py
    # (they are executed via subprocess, not imported, so .so/.pyd won't work)
    # Connector bridges
    "plutus/connectors/discord_bridge.py",
    "plutus/connectors/telegram_bridge.py",
]

[tool.hatch.build.targets.sdist.force-include]
"ui/dist" = "ui/dist"

[tool.hatch.build.targets.wheel.force-include]
"ui/dist" = "plutus/ui_dist"

# Force platform-specific wheel tags when compiled extensions are present
[tool.hatch.build.hooks.custom]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
