[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plutus-ai"
dynamic = ["version"]
description = "Autonomous AI agent with subprocess orchestration, dynamic tool creation, and a local-first web interface"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [{ name = "Plutus Contributors" }]
keywords = ["ai", "agent", "autonomous", "guardrails", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "litellm>=1.55.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.8.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "psutil>=6.1.0",
    "python-multipart>=0.0.18",
    "anthropic>=0.40.0",
    "pyperclip>=1.8.0",
    "aiohttp>=3.11.0",
    "discord.py>=2.7.1",
    "openai>=1.60.0",
    "google-genai>=1.12.0",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
desktop = [
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
]
browser = [
    "playwright>=1.49.0",
]
all = [
    "plutus-ai[desktop,browser]",
]
dev = [
    "plutus-ai[all]",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
build = [
    "cython>=3.2.4",
    "setuptools>=69.0.0",
]

[project.scripts]
plutus = "plutus.cli:main"

[project.urls]
Homepage = "https://github.com/plutus-ai/plutus"
Repository = "https://github.com/plutus-ai/plutus"
Issues = "https://github.com/plutus-ai/plutus/issues"

[tool.hatch.version]
path = "plutus/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["plutus"]
# Include compiled .so (Linux/macOS) and .pyd (Windows) in the wheel
artifacts = ["plutus/**/*.so", "plutus/**/*.pyd"]
# Exclude .py source for compiled/protected modules — only .so/.pyd ship in wheels.
# The sdist still includes all .py files for building from source.
#
# Strategy: protect the "product glue" (installer, server, onboarding, auto-config)
# that turns raw code into a polished product. The engine underneath (core agent,
# tools, PC control, skills, connectors, guardrails) is open source.
exclude = [
    # CLI — installer, onboarding wizard, setup commands
    "plutus/cli.py",
    # Gateway — server startup, API routes, WebSocket orchestration
    "plutus/gateway/server.py",
    "plutus/gateway/routes.py",
    "plutus/gateway/ws.py",
    # Product features — heartbeat monitoring, task scheduler
    "plutus/core/heartbeat.py",
    "plutus/core/scheduler.py",
]

[tool.hatch.build.targets.sdist.force-include]
"ui/dist" = "ui/dist"

[tool.hatch.build.targets.wheel.force-include]
"ui/dist" = "plutus/ui_dist"

# Force platform-specific wheel tags when compiled extensions are present
[tool.hatch.build.hooks.custom]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
