[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plutus-shared"
version = "0.1.0"
description = "Shared models, memory stores, skill stores, and connectors for Plutus AI agent"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
cloud = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
]
bridge = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pyjwt[crypto]>=2.8.0",
]
all = [
    "plutus-shared[cloud,bridge]",
]

[tool.hatch.build.targets.wheel]
packages = ["shared"]
